@@ -14,3 +14,9 @@
 	display: inline;
 	font-weight: bold;
 }
+
+#wp_movie_ratings ul li input.button {
+	border-width: 1px;
+	margin: 0 0 -1px 7px;
+	padding: 0;
+}
