@@ -1,9 +1,15 @@
 WP Movie Ratings changelog:
-- added option to customize the dialog title for movie ratings box via Wordpress options panel.
+===========================
+
+2006-07-
+- you can now edit and delete your movie ratings.
+- added option to customize the dialogue title for movie ratings box via Wordpress options panel.
 - added option to display movie ratings using 5 stars instead of 10.
 - ability to set custom date the film was watched on (instead of assuming the current date) and display movie ratings based on this date instead of id.
 - new statistic: average movie rating for all rated movies.
 - fixed SQL errors when there are no movies rated.
+- fixed hardcoded wordpress table names which could result in errors during installation and usage.
+
 
 2006-06-27
 - sidebar mode, where movie ratings are on a separate line, so the box can be as thin as 170px for star ratings (images) and 100px for text ratings.
